--- a/app/views/navbar/index.html
+++ b/app/views/navbar/index.html
@@ -8,7 +8,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" ui-sref="home">Eric's Angular App</a>
+        <a class="navbar-brand" ui-sref="home" data-toggle="collapse" data-target=".navbar-collapse.in">Eric's Angular App</a>
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
