--- a/app/views/signup/index.html
+++ b/app/views/signup/index.html
@@ -10,6 +10,11 @@
       </div>
 
       <div class="form-group">
+        <lable>Username: </label>
+        <input type="text" name="username" ng-model="auth.signupForm.username" required="required" class="form-control"/>
+      </div>
+
+      <div class="form-group">
         <lable>Password: </label>
         <input type="password" name="password" ng-model="auth.signupForm.password" required="required" class="form-control"/>
       </div>
